--- a/css/main.css
+++ b/css/main.css
@@ -5,14 +5,12 @@
 }
 #simpleslides img:first-child {
   display: block;
-  z-index: 1;
 }
 #simpleslides img {
   display: none;
   left: 0px;
   position: absolute;
   top: 0px;
-  z-index: 0;
 }
 #simpleslides ul {
   bottom: 0px;
@@ -20,21 +18,22 @@
   padding: 0px;
   position: absolute;
   text-align: center;
+  vertical-align: text-bottom;
   width: 500px;
   z-index: 9999;
 }
 #simpleslides ul li {
-  border: 3px solid #000000;
+  background: #ccc;
+  border: 3px solid #ccc;
   border-radius: 100px;
   display: inline-block;
-  height: 10px;
-  margin: 10px;
-  padding: 3px;
-  width: 10px;
+  height: 20px;
+  margin: 30px 30px 30px 30px;
+  width: 20px;
 }
 #simpleslides ul li a.activeSlide {
-  background: #000;
+  background: #666;
   border-radius: 100px;
   display: block;
-  height: 10px;
+  height: 20px;
 }
